# pyschwab

./: .gitignore  LICENSE  README.md  env_example  pyproject.toml
.github/workflows/: release.yml
config/: pyschwab.yaml
pyschwab/: auth.py  exceptions.py  log.py  market.py  market_models.py  trading.py  trading_models.py  types.py  user_input.py  utils.py
tests/: test_api.py
tests/integration/: test_api.json  test_api.py
tests/unit/: test_types.py
